[gd_scene load_steps=10 format=3 uid="uid://h262r6rapa1q"]

[ext_resource type="Texture2D" uid="uid://bw6j6amowm00d" path="res://img/menus/Options menu Base.png" id="1_qee13"]
[ext_resource type="Texture2D" uid="uid://8uegd3w8jb1q" path="res://img/menus/Accept-06.png" id="2_g86xm"]
[ext_resource type="Script" path="res://options_menu.gd" id="2_ie5hj"]
[ext_resource type="Texture2D" uid="uid://d1lyifbsbxhgj" path="res://img/menus/Cancel-06.png" id="3_075qb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uw3av"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_bhkvv"]
color = Color(1, 1, 1, 1)
grow_begin = 0.0
thickness = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fro64"]
content_margin_left = 30.0
content_margin_right = 30.0
bg_color = Color(1, 1, 1, 1)
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mbkpe"]
content_margin_left = 30.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
bg_color = Color(7.31587e-06, 0.861457, 0.998519, 1)
border_color = Color(0, 0.862745, 1, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ejibe"]
content_margin_left = 30.0
content_margin_top = 30.0
content_margin_right = 30.0
content_margin_bottom = 30.0
bg_color = Color(0, 0.662745, 0.772549, 1)
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[node name="OptionsMenu" type="Sprite2D"]
position = Vector2(594, 336)
texture = ExtResource("1_qee13")
script = ExtResource("2_ie5hj")

[node name="Accept" type="Button" parent="."]
offset_left = -328.0
offset_top = 157.0
offset_right = -42.0
offset_bottom = 277.0
scale = Vector2(0.8, 0.8)
theme_override_colors/icon_pressed_color = Color(0.576471, 0.694118, 1, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_styles/focus = SubResource("StyleBoxEmpty_uw3av")
keep_pressed_outside = true
icon = ExtResource("2_g86xm")
flat = true

[node name="Cancel" type="Button" parent="."]
offset_left = 50.9999
offset_top = 157.0
offset_right = 337.0
offset_bottom = 277.0
scale = Vector2(0.8, 0.8)
theme_override_colors/icon_pressed_color = Color(0.576471, 0.694118, 1, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_styles/focus = SubResource("StyleBoxEmpty_uw3av")
keep_pressed_outside = true
icon = ExtResource("3_075qb")
flat = true

[node name="TabContainer" type="TabContainer" parent="."]
offset_left = -426.0
offset_top = -118.0
offset_right = 423.0
offset_bottom = 138.0

[node name="Sound" type="HBoxContainer" parent="TabContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound"]
layout_mode = 2
size_flags_horizontal = 0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20

[node name="Music" type="Label" parent="TabContainer/Sound/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 31
text = "Music"

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Sound"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound/VBoxContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40

[node name="MusicBar" type="HScrollBar" parent="TabContainer/Sound/VBoxContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/scroll = SubResource("StyleBoxLine_bhkvv")
theme_override_styles/grabber = SubResource("StyleBoxFlat_fro64")
theme_override_styles/grabber_highlight = SubResource("StyleBoxFlat_mbkpe")
theme_override_styles/grabber_pressed = SubResource("StyleBoxFlat_ejibe")
step = 1.0
value = 100.0
rounded = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="Cancel" to="." method="_on_cancel_pressed"]
[connection signal="value_changed" from="TabContainer/Sound/VBoxContainer2/MarginContainer/MusicBar" to="." method="_on_music_bar_value_changed"]
